..F....... [ZBXNEXT-5596] fixed broken layout

--- a/frontends/php/assets/styles/hc-dark.css
+++ b/frontends/php/assets/styles/hc-dark.css
@@ -5047,51 +5047,34 @@ table.preprocessing-test-results .rel-container {
     height: 100%; } }
 .interface-container {
   margin-bottom: 5px;
-  padding: 0; }
+  padding: 0;
+  width: fit-content;
+  width: -moz-fit-content; }
   .interface-container.interface-container-header {
     margin: 0;
     border: 0; }
   .interface-container:empty {
     display: none; }
   .interface-container .interface-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: start;
-    align-items: stretch;
-    margin-bottom: 5px;
-    width: fit-content;
-    width: -moz-fit-content; }
+    display: grid;
+    grid-template-columns: 26px 36px 225px 175px 85px 100px 20px 1fr;
+    grid-template-rows: 25px 1fr;
+    gap: 5px;
+    padding-top: 10px; }
     .interface-container .interface-row.interface-row-header {
       margin: 0; }
     .interface-container .interface-row[data-type] .interface-cell-details {
       display: none; }
     .interface-container .interface-row .interface-cell {
-      margin: 5px 5px 5px 0;
-      flex: 0 1 auto;
       align-self: center; }
       .interface-container .interface-row .interface-cell .interface-btn-toggle {
         display: none; }
       .interface-container .interface-row .interface-cell.interface-cell-header {
         color: #cacaca;
         text-align: left; }
-      .interface-container .interface-row .interface-cell.interface-cell-icon {
-        width: 26px; }
-      .interface-container .interface-row .interface-cell.interface-cell-type {
-        width: 36px; }
-      .interface-container .interface-row .interface-cell.interface-cell-ip {
-        width: 225px; }
-      .interface-container .interface-row .interface-cell.interface-cell-useip {
-        width: 83px; }
-      .interface-container .interface-row .interface-cell.interface-cell-dns {
-        width: 175px; }
-      .interface-container .interface-row .interface-cell.interface-cell-port {
-        width: 100px; }
       .interface-container .interface-row .interface-cell .table-forms-td-left,
       .interface-container .interface-row .interface-cell .table-forms-td-right {
         padding-bottom: 0; }
-  .interface-container.list-vertical-accordion {
-    margin-bottom: 0; }
 
 .interface-row.list-accordion-item[data-type="2"].list-accordion-item-closed .list-accordion-item-body {
   display: none; }
@@ -5101,8 +5084,7 @@ table.preprocessing-test-results .rel-container {
   display: inline-block; }
 
 .interface-container:not(.interface-container-header):not(:empty) ~ .interface-container:not(:empty) .interface-row:nth-child(1) {
-  border-top: 1px solid #666666;
-  padding-top: 5px; }
+  border-top: 1px solid #666666; }
 
 .dashbrd-grid-new-widget-placeholder .dashbrd-grid-widget-new-box,
 .dashbrd-grid-new-widget-placeholder .dashbrd-grid-widget-set-position,
